// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectForm matches snapshot 1`] = `
<div
  className="usa-form "
>
  <label
    className=""
    htmlFor={1}
  >
    Some label
  </label>
  <select
    className="select-offset select-black"
    disabled={false}
    id={1}
    name={1}
    onChange={[Function]}
    value=""
  >
    <option
      disabled={true}
      key=""
      value=""
    >
      Sort option
    </option>
    <option
      key="position__title"
      value="position__title"
    >
      Position title: A-Z
    </option>
    <option
      key="-position__grade"
      value="-position__grade"
    >
      Grade: Low to high
    </option>
    <option
      key="-position__bureau"
      value="-position__bureau"
    >
      Bureau: A-Z
    </option>
    <option
      key="-posted_date"
      value="-posted_date"
    >
      Posted date: Most recent
    </option>
    <option
      key="posted_date"
      value="posted_date"
    >
      Posted date: Oldest
    </option>
    <option
      key="ted"
      value="ted"
    >
      TED: Soonest
    </option>
    <option
      key="-ted"
      value="-ted"
    >
      TED: Latest
    </option>
    <option
      key="position__position_number"
      value="position__position_number"
    >
      Position number: Low to high
    </option>
    <option
      key="-position__post__has_service_needs_differential"
      value="-position__post__has_service_needs_differential"
    >
      Featured positions
    </option>
    <option
      key="location_city"
      value="location_city"
    >
      Location: A-Z
    </option>
    <option
      key="-location_city"
      value="-location_city"
    >
      Location: Z-A
    </option>
  </select>
</div>
`;

exports[`SelectForm matches snapshot when disabled 1`] = `
<div
  className="usa-form results-loading"
>
  <label
    className=""
    htmlFor={1}
  >
    Some label
  </label>
  <select
    className="select-offset select-black"
    disabled={true}
    id={1}
    name={1}
    onChange={[Function]}
    value=""
  >
    <option
      disabled={true}
      key=""
      value=""
    >
      Sort option
    </option>
    <option
      key="position__title"
      value="position__title"
    >
      Position title: A-Z
    </option>
    <option
      key="-position__grade"
      value="-position__grade"
    >
      Grade: Low to high
    </option>
    <option
      key="-position__bureau"
      value="-position__bureau"
    >
      Bureau: A-Z
    </option>
    <option
      key="-posted_date"
      value="-posted_date"
    >
      Posted date: Most recent
    </option>
    <option
      key="posted_date"
      value="posted_date"
    >
      Posted date: Oldest
    </option>
    <option
      key="ted"
      value="ted"
    >
      TED: Soonest
    </option>
    <option
      key="-ted"
      value="-ted"
    >
      TED: Latest
    </option>
    <option
      key="position__position_number"
      value="position__position_number"
    >
      Position number: Low to high
    </option>
    <option
      key="-position__post__has_service_needs_differential"
      value="-position__post__has_service_needs_differential"
    >
      Featured positions
    </option>
    <option
      key="location_city"
      value="location_city"
    >
      Location: A-Z
    </option>
    <option
      key="-location_city"
      value="-location_city"
    >
      Location: Z-A
    </option>
  </select>
</div>
`;
